// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select can have an error message 1`] = `
.c13 {
  width: 1.25remrem;
  height: 1.25remrem;
}

.c3 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 700;
}

.c3 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c6 {
  color: #2a2c2e;
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  word-wrap: break-word;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1.42857;
  font-weight: 500;
  text-align: left;
}

.c6 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c11 > *:not(:last-child) {
  margin-right: 1rem;
}

.c5 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c4 {
  border-radius: 4px;
  background-color: #fff6f8;
}

.c15 {
  font-family: 'TELUS Core Icons';
  display: inline-block;
  font-weight: normal;
  font-style: normal;
  speak: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: none;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1;
  vertical-align: middle;
  color: #c12335;
  font-size: 1rem;
}

.c15::before {
  content: '\\f105';
}

.c12 {
  line-height: 1;
}

.c8 {
  background-color: #fff;
  position: relative;
}

.c9 {
  height: 3rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  margin: 0;
  outline: 0;
  text-overflow: ellipsis;
  border-color: #54595f;
  background-color: #fff;
  padding: 0.5rem 3rem 0.5rem 1rem;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
  color: #2a2c2e;
  min-height: 3rem;
  max-height: 3rem;
  padding: 0.5rem 3rem 0.5rem 1rem;
}

.c9::-ms-expand {
  display: none;
}

.c9::-webkit-input-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c9::-moz-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c9:-ms-input-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c9::placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c9::-webkit-inner-spin-button,
.c9::-webkit-outer-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c9:focus {
  border-color: transparent;
  box-shadow: 0 0 4px 1px #54595f;
  background-color: #fff;
}

.c9:not(:focus) {
  border-color: #c12335;
}

.c10 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 1rem;
  pointer-events: none;
}

.c14 {
  line-height: 1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  position: relative;
}

<Select
  defaultValue=""
  error="Oh no a terrible error!"
  feedback="error"
  hintPosition="inline"
  id="some-id"
  label="The select"
  options={
    Array [
      Object {
        "readOnly": true,
        "text": "text one",
        "value": "value-1",
      },
      Object {
        "readOnly": true,
        "text": "text two",
        "value": "value-2",
      },
    ]
  }
>
  <Box
    between={2}
    inline={false}
    tag="div"
  >
    <styled.div
      between={2}
      inline={false}
      tag="div"
    >
      <StyledComponent
        between={2}
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [
              [Function],
            ],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c11",
              "rules": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        inline={false}
        tag="div"
      >
        <div
          className="c0"
        >
          <div>
            <Box
              between={2}
              inline={true}
              tag="div"
            >
              <styled.div
                between={2}
                inline={true}
                tag="div"
              >
                <StyledComponent
                  between={2}
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [
                        [Function],
                      ],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-bdVaJa",
                        "isStatic": false,
                        "lastClassName": "c11",
                        "rules": Array [
                          [Function],
                          [Function],
                          [Function],
                          [Function],
                          [Function],
                        ],
                      },
                      "displayName": "styled.div",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-bdVaJa",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  inline={true}
                  tag="div"
                >
                  <div
                    className="c1"
                  >
                    <label
                      htmlFor="some-id"
                    >
                      <Styled(Box)
                        between={2}
                        inline={true}
                        tag="span"
                      >
                        <StyledComponent
                          between={2}
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "componentId": "sc-gZMcBi",
                                "isStatic": true,
                                "lastClassName": "c2",
                                "rules": Array [
                                  "align-items: center;",
                                ],
                              },
                              "defaultProps": Object {
                                "below": undefined,
                                "between": undefined,
                                "className": undefined,
                                "horizontal": undefined,
                                "inline": false,
                                "inset": undefined,
                                "tag": "div",
                                "vertical": undefined,
                              },
                              "displayName": "Styled(Box)",
                              "foldedComponentIds": Array [],
                              "propTypes": Object {
                                "below": [Function],
                                "between": [Function],
                                "children": [Function],
                                "className": [Function],
                                "horizontal": [Function],
                                "inline": [Function],
                                "inset": [Function],
                                "tag": [Function],
                                "vertical": [Function],
                              },
                              "render": [Function],
                              "styledComponentId": "sc-gZMcBi",
                              "target": Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "defaultProps": Object {
                                  "below": undefined,
                                  "between": undefined,
                                  "className": undefined,
                                  "horizontal": undefined,
                                  "inline": false,
                                  "inset": undefined,
                                  "tag": "div",
                                  "vertical": undefined,
                                },
                                "displayName": "Box",
                                "propTypes": Object {
                                  "below": [Function],
                                  "between": [Function],
                                  "children": [Function],
                                  "className": [Function],
                                  "horizontal": [Function],
                                  "inline": [Function],
                                  "inset": [Function],
                                  "tag": [Function],
                                  "vertical": [Function],
                                },
                                "render": [Function],
                              },
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                          inline={true}
                          tag="span"
                        >
                          <Box
                            between={2}
                            className="c2"
                            inline={true}
                            tag="span"
                          >
                            <styled.div
                              between={2}
                              className="c2"
                              inline={true}
                              tag="span"
                            >
                              <StyledComponent
                                between={2}
                                className="c2"
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [
                                      [Function],
                                    ],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-bdVaJa",
                                      "isStatic": false,
                                      "lastClassName": "c11",
                                      "rules": Array [
                                        [Function],
                                        [Function],
                                        [Function],
                                        [Function],
                                        [Function],
                                      ],
                                    },
                                    "displayName": "styled.div",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "sc-bdVaJa",
                                    "target": "div",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                                inline={true}
                                tag="span"
                              >
                                <span
                                  className="c2 sc-gZMcBi c2 c1"
                                >
                                  <Text
                                    block={false}
                                    bold={true}
                                    data-testid="selectLabel"
                                    invert={false}
                                    size="medium"
                                  >
                                    <Text__StyledText
                                      block={false}
                                      bold={true}
                                      data-testid="selectLabel"
                                      invert={false}
                                      size="medium"
                                    >
                                      <StyledComponent
                                        block={false}
                                        bold={true}
                                        data-testid="selectLabel"
                                        forwardedComponent={
                                          Object {
                                            "$$typeof": Symbol(react.forward_ref),
                                            "attrs": Array [],
                                            "componentStyle": ComponentStyle {
                                              "componentId": "Text__StyledText-sc-1m0rr67-0",
                                              "isStatic": false,
                                              "lastClassName": "c3",
                                              "rules": Array [
                                                [Function],
                                                [Function],
                                                [Function],
                                                [Function],
                                                [Function],
                                                "sup {",
                                                "top: -0.5em;",
                                                "font-size: 0.875rem;",
                                                "position: relative;",
                                                "vertical-align: baseline;",
                                                "padding-left: 0.1em;",
                                                "}",
                                              ],
                                            },
                                            "displayName": "Text__StyledText",
                                            "foldedComponentIds": Array [],
                                            "render": [Function],
                                            "styledComponentId": "Text__StyledText-sc-1m0rr67-0",
                                            "target": "span",
                                            "toString": [Function],
                                            "warnTooManyClasses": [Function],
                                            "withComponent": [Function],
                                          }
                                        }
                                        forwardedRef={null}
                                        invert={false}
                                        size="medium"
                                      >
                                        <span
                                          className="c3"
                                          data-testid="selectLabel"
                                          size="medium"
                                        >
                                          The select
                                        </span>
                                      </StyledComponent>
                                    </Text__StyledText>
                                  </Text>
                                </span>
                              </StyledComponent>
                            </styled.div>
                          </Box>
                        </StyledComponent>
                      </Styled(Box)>
                    </label>
                  </div>
                </StyledComponent>
              </styled.div>
            </Box>
          </div>
          <InputFeedback
            feedback="error"
            id="some-id_error-message"
          >
            <Styled(Component)
              feedback="error"
              id="some-id_error-message"
              inset={3}
              role="alert"
            >
              <StyledComponent
                feedback="error"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-bwzfXH",
                      "isStatic": false,
                      "lastClassName": "c4",
                      "rules": Array [
                        [Function],
                      ],
                    },
                    "displayName": "Styled(Component)",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-bwzfXH",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                id="some-id_error-message"
                inset={3}
                role="alert"
              >
                <Component
                  className="c4"
                  feedback="error"
                  id="some-id_error-message"
                  inset={3}
                  role="alert"
                >
                  <Box
                    className="c4"
                    id="some-id_error-message"
                    inline={false}
                    inset={3}
                    role="alert"
                    tag="div"
                  >
                    <styled.div
                      className="c4"
                      id="some-id_error-message"
                      inline={false}
                      inset={3}
                      role="alert"
                      tag="div"
                    >
                      <StyledComponent
                        className="c4"
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [
                              [Function],
                            ],
                            "componentStyle": ComponentStyle {
                              "componentId": "sc-bdVaJa",
                              "isStatic": false,
                              "lastClassName": "c11",
                              "rules": Array [
                                [Function],
                                [Function],
                                [Function],
                                [Function],
                                [Function],
                              ],
                            },
                            "displayName": "styled.div",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "sc-bdVaJa",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                        id="some-id_error-message"
                        inline={false}
                        inset={3}
                        role="alert"
                        tag="div"
                      >
                        <div
                          className="c4 sc-bwzfXH c4 c5"
                          id="some-id_error-message"
                          role="alert"
                        >
                          <Paragraph
                            align="left"
                            bold={false}
                            invert={false}
                            size="small"
                          >
                            <Paragraph__StyledParagraph
                              align="left"
                              bold={false}
                              invert={false}
                              size="small"
                            >
                              <StyledComponent
                                align="left"
                                bold={false}
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "Paragraph__StyledParagraph-efl81j-0",
                                      "isStatic": false,
                                      "lastClassName": "c6",
                                      "rules": Array [
                                        [Function],
                                        "word-wrap: break-word;",
                                        "padding: 0;",
                                        "margin: 0;",
                                        [Function],
                                        [Function],
                                        [Function],
                                        [Function],
                                        "sup {",
                                        "top: -0.5em;",
                                        "font-size: 0.875rem;",
                                        "position: relative;",
                                        "vertical-align: baseline;",
                                        "padding-left: 0.1em;",
                                        "}",
                                      ],
                                    },
                                    "displayName": "Paragraph__StyledParagraph",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "Paragraph__StyledParagraph-efl81j-0",
                                    "target": "p",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                                invert={false}
                                size="small"
                              >
                                <p
                                  className="c6"
                                  size="small"
                                >
                                  Oh no a terrible error!
                                </p>
                              </StyledComponent>
                            </Paragraph__StyledParagraph>
                          </Paragraph>
                        </div>
                      </StyledComponent>
                    </styled.div>
                  </Box>
                </Component>
              </StyledComponent>
            </Styled(Component)>
          </InputFeedback>
          <styled.div
            _css={
              Object {
                "position": "relative",
              }
            }
          >
            <StyledComponent
              _css={
                Object {
                  "position": "relative",
                }
              }
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-gqjmRU",
                    "isStatic": false,
                    "lastClassName": "c7",
                    "rules": Array [
                      [Function],
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-gqjmRU",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <div
                className="c7"
              >
                <Select__SelectWrapper>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Select__SelectWrapper-sc-1kajzpi-0",
                          "isStatic": true,
                          "lastClassName": "c8",
                          "rules": Array [
                            "background-color: #fff;",
                            "position: relative;",
                          ],
                        },
                        "displayName": "Select__SelectWrapper",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Select__SelectWrapper-sc-1kajzpi-0",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="c8"
                    >
                      <Select__StyledSelect
                        aria-describedby="some-id_error-message"
                        aria-invalid={true}
                        defaultValue=""
                        feedback="error"
                        id="some-id"
                        onBlur={[Function]}
                        onFocus={[Function]}
                      >
                        <StyledComponent
                          aria-describedby="some-id_error-message"
                          aria-invalid={true}
                          defaultValue=""
                          feedback="error"
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "componentId": "Select__StyledSelect-sc-1kajzpi-1",
                                "isStatic": false,
                                "lastClassName": "c9",
                                "rules": Array [
                                  "height: 3rem;",
                                  "appearance: none;",
                                  "&::-ms-expand {",
                                  "display: none;",
                                  "}",
                                  "width: 100%;",
                                  "margin: 0;",
                                  "outline: 0;",
                                  "text-overflow: ellipsis;",
                                  "border-color: #54595f;",
                                  "background-color: #fff;",
                                  "&::placeholder {",
                                  "font: inherit;",
                                  "letter-spacing: inherit;",
                                  "line-height: inherit;",
                                  "color: #54595f;",
                                  "}",
                                  [Function],
                                  "border-width: 1px;",
                                  "border-style: solid;",
                                  "border-radius: 4px;",
                                  "font-family: \\"TELUS-Web\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif;",
                                  "word-wrap: break-word;",
                                  "font-size: 1rem;",
                                  "letter-spacing: -0.8px;",
                                  "line-height: 1.5;",
                                  "font-weight: 400;",
                                  "color: #2a2c2e;",
                                  [Function],
                                  "&:focus {",
                                  "border-color: transparent;",
                                  "box-shadow: 0 0 4px 1px #54595f;",
                                  "background-color: #fff;",
                                  "}",
                                  [Function],
                                  [Function],
                                ],
                              },
                              "displayName": "Select__StyledSelect",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "Select__StyledSelect-sc-1kajzpi-1",
                              "target": "select",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                          id="some-id"
                          onBlur={[Function]}
                          onFocus={[Function]}
                        >
                          <select
                            aria-describedby="some-id_error-message"
                            aria-invalid={true}
                            className="c9"
                            defaultValue=""
                            id="some-id"
                            onBlur={[Function]}
                            onFocus={[Function]}
                          >
                            <option
                              key="value-1"
                              value="value-1"
                            >
                              text one
                            </option>
                            <option
                              key="value-2"
                              value="value-2"
                            >
                              text two
                            </option>
                          </select>
                        </StyledComponent>
                      </Select__StyledSelect>
                      <Styled(Box)
                        between={3}
                        inline={true}
                        tag="div"
                      >
                        <StyledComponent
                          between={3}
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "componentId": "sc-iwsKbI",
                                "isStatic": true,
                                "lastClassName": "c10",
                                "rules": Array [
                                  "position: absolute;",
                                  "top: 50%;",
                                  "transform: translateY(-50%);",
                                  "right: 1rem;",
                                  "pointer-events: none;",
                                ],
                              },
                              "defaultProps": Object {
                                "below": undefined,
                                "between": undefined,
                                "className": undefined,
                                "horizontal": undefined,
                                "inline": false,
                                "inset": undefined,
                                "tag": "div",
                                "vertical": undefined,
                              },
                              "displayName": "Styled(Box)",
                              "foldedComponentIds": Array [],
                              "propTypes": Object {
                                "below": [Function],
                                "between": [Function],
                                "children": [Function],
                                "className": [Function],
                                "horizontal": [Function],
                                "inline": [Function],
                                "inset": [Function],
                                "tag": [Function],
                                "vertical": [Function],
                              },
                              "render": [Function],
                              "styledComponentId": "sc-iwsKbI",
                              "target": Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "defaultProps": Object {
                                  "below": undefined,
                                  "between": undefined,
                                  "className": undefined,
                                  "horizontal": undefined,
                                  "inline": false,
                                  "inset": undefined,
                                  "tag": "div",
                                  "vertical": undefined,
                                },
                                "displayName": "Box",
                                "propTypes": Object {
                                  "below": [Function],
                                  "between": [Function],
                                  "children": [Function],
                                  "className": [Function],
                                  "horizontal": [Function],
                                  "inline": [Function],
                                  "inset": [Function],
                                  "tag": [Function],
                                  "vertical": [Function],
                                },
                                "render": [Function],
                              },
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                          inline={true}
                          tag="div"
                        >
                          <Box
                            between={3}
                            className="c10"
                            inline={true}
                            tag="div"
                          >
                            <styled.div
                              between={3}
                              className="c10"
                              inline={true}
                              tag="div"
                            >
                              <StyledComponent
                                between={3}
                                className="c10"
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [
                                      [Function],
                                    ],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-bdVaJa",
                                      "isStatic": false,
                                      "lastClassName": "c11",
                                      "rules": Array [
                                        [Function],
                                        [Function],
                                        [Function],
                                        [Function],
                                        [Function],
                                      ],
                                    },
                                    "displayName": "styled.div",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "sc-bdVaJa",
                                    "target": "div",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                                inline={true}
                                tag="div"
                              >
                                <div
                                  className="c10 sc-iwsKbI c10 c11"
                                >
                                  <FeedbackIcon
                                    feedback="error"
                                    showIcon={true}
                                  >
                                    <Fade
                                      in={true}
                                      mountOnEnter={true}
                                      timeout={100}
                                      unmountOnExit={true}
                                    >
                                      <Transition
                                        appear={false}
                                        enter={true}
                                        exit={true}
                                        in={true}
                                        mountOnEnter={true}
                                        onEnter={[Function]}
                                        onEntered={[Function]}
                                        onEntering={[Function]}
                                        onExit={[Function]}
                                        onExited={[Function]}
                                        onExiting={[Function]}
                                        timeout={100}
                                        unmountOnExit={true}
                                      >
                                        <div
                                          style={
                                            Object {
                                              "opacity": 1,
                                              "transition": "opacity 100ms ease-in-out",
                                            }
                                          }
                                        >
                                          <FeedbackIcon__StyledIcon>
                                            <StyledComponent
                                              forwardedComponent={
                                                Object {
                                                  "$$typeof": Symbol(react.forward_ref),
                                                  "attrs": Array [],
                                                  "componentStyle": ComponentStyle {
                                                    "componentId": "FeedbackIcon__StyledIcon-yxz8rh-0",
                                                    "isStatic": true,
                                                    "lastClassName": "c12",
                                                    "rules": Array [
                                                      "line-height: 1;",
                                                    ],
                                                  },
                                                  "displayName": "FeedbackIcon__StyledIcon",
                                                  "foldedComponentIds": Array [],
                                                  "render": [Function],
                                                  "styledComponentId": "FeedbackIcon__StyledIcon-yxz8rh-0",
                                                  "target": "div",
                                                  "toString": [Function],
                                                  "warnTooManyClasses": [Function],
                                                  "withComponent": [Function],
                                                }
                                              }
                                              forwardedRef={null}
                                            >
                                              <div
                                                className="c12"
                                              >
                                                <NotificationError
                                                  copy={
                                                    Object {
                                                      "a11yText": "The value of this input field is invalid.",
                                                    }
                                                  }
                                                >
                                                  <FeedbackIcon
                                                    copy={
                                                      Object {
                                                        "a11yText": "The value of this input field is invalid.",
                                                      }
                                                    }
                                                    copyDictionary={
                                                      Object {
                                                        "en": Object {
                                                          "a11yText": "Error",
                                                        },
                                                        "fr": Object {
                                                          "a11yText": "Erreur",
                                                        },
                                                      }
                                                    }
                                                    height={20}
                                                    optionalText={false}
                                                    viewBox="0 0 20 20"
                                                    width={20}
                                                  >
                                                    <FeedbackIcon__StyledSVG
                                                      height="1.25rem"
                                                      role="img"
                                                      viewBox="0 0 20 20"
                                                      width="1.25rem"
                                                    >
                                                      <StyledComponent
                                                        forwardedComponent={
                                                          Object {
                                                            "$$typeof": Symbol(react.forward_ref),
                                                            "attrs": Array [],
                                                            "componentStyle": ComponentStyle {
                                                              "componentId": "FeedbackIcon__StyledSVG-sc-1swr281-0",
                                                              "isStatic": false,
                                                              "lastClassName": "c13",
                                                              "rules": Array [
                                                                [Function],
                                                              ],
                                                            },
                                                            "displayName": "FeedbackIcon__StyledSVG",
                                                            "foldedComponentIds": Array [],
                                                            "render": [Function],
                                                            "styledComponentId": "FeedbackIcon__StyledSVG-sc-1swr281-0",
                                                            "target": "svg",
                                                            "toString": [Function],
                                                            "warnTooManyClasses": [Function],
                                                            "withComponent": [Function],
                                                          }
                                                        }
                                                        forwardedRef={null}
                                                        height="1.25rem"
                                                        role="img"
                                                        viewBox="0 0 20 20"
                                                        width="1.25rem"
                                                      >
                                                        <svg
                                                          className="c13"
                                                          height="1.25rem"
                                                          role="img"
                                                          viewBox="0 0 20 20"
                                                          width="1.25rem"
                                                        >
                                                          <title>
                                                            The value of this input field is invalid.
                                                          </title>
                                                          <path
                                                            d="M0 10C0 4.48 4.48 0 10 0s10 4.48 10 10-4.48 10-10 10S0 15.52 0 10zm10 5.833a.833.833 0 1 0 0-1.666.833.833 0 0 0 0 1.666zm-.003-2.5c.354 0 .644-.306.654-.69l.182-6.912c.01-.4-.285-.731-.654-.731H9.82c-.369 0-.664.33-.654.73l.175 6.912c.01.385.3.691.655.691z"
                                                            fill="#c12335"
                                                            fillRule="evenodd"
                                                          />
                                                        </svg>
                                                      </StyledComponent>
                                                    </FeedbackIcon__StyledSVG>
                                                  </FeedbackIcon>
                                                </NotificationError>
                                              </div>
                                            </StyledComponent>
                                          </FeedbackIcon__StyledIcon>
                                        </div>
                                      </Transition>
                                    </Fade>
                                  </FeedbackIcon>
                                  <Select__IconLineFix>
                                    <StyledComponent
                                      forwardedComponent={
                                        Object {
                                          "$$typeof": Symbol(react.forward_ref),
                                          "attrs": Array [],
                                          "componentStyle": ComponentStyle {
                                            "componentId": "Select__IconLineFix-sc-1kajzpi-2",
                                            "isStatic": true,
                                            "lastClassName": "c14",
                                            "rules": Array [
                                              "line-height: 1;",
                                            ],
                                          },
                                          "displayName": "Select__IconLineFix",
                                          "foldedComponentIds": Array [],
                                          "render": [Function],
                                          "styledComponentId": "Select__IconLineFix-sc-1kajzpi-2",
                                          "target": "div",
                                          "toString": [Function],
                                          "warnTooManyClasses": [Function],
                                          "withComponent": [Function],
                                        }
                                      }
                                      forwardedRef={null}
                                    >
                                      <div
                                        className="c14"
                                      >
                                        <DecorativeIcon
                                          size={16}
                                          symbol="caretDown"
                                          variant="error"
                                        >
                                          <Icon
                                            aria-hidden="true"
                                            size={16}
                                            symbol="caretDown"
                                            variant="error"
                                          >
                                            <Icon__StyledIcon
                                              aria-hidden="true"
                                              iSize={16}
                                              symbol="caretDown"
                                              variant="error"
                                            >
                                              <StyledComponent
                                                aria-hidden="true"
                                                forwardedComponent={
                                                  Object {
                                                    "$$typeof": Symbol(react.forward_ref),
                                                    "attrs": Array [],
                                                    "componentStyle": ComponentStyle {
                                                      "componentId": "Icon__StyledIcon-sc-1g20dn8-0",
                                                      "isStatic": false,
                                                      "lastClassName": "c15",
                                                      "rules": Array [
                                                        [Function],
                                                        [Function],
                                                        [Function],
                                                      ],
                                                    },
                                                    "displayName": "Icon__StyledIcon",
                                                    "foldedComponentIds": Array [],
                                                    "render": [Function],
                                                    "styledComponentId": "Icon__StyledIcon-sc-1g20dn8-0",
                                                    "target": "i",
                                                    "toString": [Function],
                                                    "warnTooManyClasses": [Function],
                                                    "withComponent": [Function],
                                                  }
                                                }
                                                forwardedRef={null}
                                                iSize={16}
                                                symbol="caretDown"
                                                variant="error"
                                              >
                                                <i
                                                  aria-hidden="true"
                                                  className="c15"
                                                />
                                              </StyledComponent>
                                            </Icon__StyledIcon>
                                          </Icon>
                                        </DecorativeIcon>
                                      </div>
                                    </StyledComponent>
                                  </Select__IconLineFix>
                                </div>
                              </StyledComponent>
                            </styled.div>
                          </Box>
                        </StyledComponent>
                      </Styled(Box)>
                    </div>
                  </StyledComponent>
                </Select__SelectWrapper>
              </div>
            </StyledComponent>
          </styled.div>
        </div>
      </StyledComponent>
    </styled.div>
  </Box>
</Select>
`;

exports[`Select can render groups 1`] = `[Function]`;

exports[`Select disabling deactivates the select 1`] = `[Function]`;

exports[`Select disabling removes the positioning of the select so that the disabled treatment is displayed 1`] = `[Function]`;

exports[`Select feedback states ensures that the contents do not overlap the icons 1`] = `[Function]`;

exports[`Select label can have a hint below 1`] = `
.c2 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 700;
}

.c2 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<label
  htmlFor="the-select"
>
  <Styled(Box)
    between={2}
    inline={true}
    tag="span"
  >
    <StyledComponent
      between={2}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gZMcBi",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "align-items: center;",
            ],
          },
          "defaultProps": Object {
            "below": undefined,
            "between": undefined,
            "className": undefined,
            "horizontal": undefined,
            "inline": false,
            "inset": undefined,
            "tag": "div",
            "vertical": undefined,
          },
          "displayName": "Styled(Box)",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "below": [Function],
            "between": [Function],
            "children": [Function],
            "className": [Function],
            "horizontal": [Function],
            "inline": [Function],
            "inset": [Function],
            "tag": [Function],
            "vertical": [Function],
          },
          "render": [Function],
          "styledComponentId": "sc-gZMcBi",
          "target": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "below": undefined,
              "between": undefined,
              "className": undefined,
              "horizontal": undefined,
              "inline": false,
              "inset": undefined,
              "tag": "div",
              "vertical": undefined,
            },
            "displayName": "Box",
            "propTypes": Object {
              "below": [Function],
              "between": [Function],
              "children": [Function],
              "className": [Function],
              "horizontal": [Function],
              "inline": [Function],
              "inset": [Function],
              "tag": [Function],
              "vertical": [Function],
            },
            "render": [Function],
          },
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      inline={true}
      tag="span"
    >
      <Box
        between={2}
        className="c0"
        inline={true}
        tag="span"
      >
        <styled.div
          between={2}
          className="c0"
          inline={true}
          tag="span"
        >
          <StyledComponent
            between={2}
            className="c0"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [
                  [Function],
                ],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bdVaJa",
                  "isStatic": false,
                  "lastClassName": "LKvBy",
                  "rules": Array [
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-bdVaJa",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            inline={true}
            tag="span"
          >
            <span
              className="c0 sc-gZMcBi c0 c1"
            >
              <Text
                block={false}
                bold={true}
                data-testid="selectLabel"
                invert={false}
                size="medium"
              >
                <Text__StyledText
                  block={false}
                  bold={true}
                  data-testid="selectLabel"
                  invert={false}
                  size="medium"
                >
                  <StyledComponent
                    block={false}
                    bold={true}
                    data-testid="selectLabel"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Text__StyledText-sc-1m0rr67-0",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                            "sup {",
                            "top: -0.5em;",
                            "font-size: 0.875rem;",
                            "position: relative;",
                            "vertical-align: baseline;",
                            "padding-left: 0.1em;",
                            "}",
                          ],
                        },
                        "displayName": "Text__StyledText",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Text__StyledText-sc-1m0rr67-0",
                        "target": "span",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    invert={false}
                    size="medium"
                  >
                    <span
                      className="c2"
                      data-testid="selectLabel"
                      size="medium"
                    >
                      The select
                    </span>
                  </StyledComponent>
                </Text__StyledText>
              </Text>
            </span>
          </StyledComponent>
        </styled.div>
      </Box>
    </StyledComponent>
  </Styled(Box)>
</label>
`;

exports[`Select label can have a short hint 1`] = `
.c2 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 700;
}

.c2 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c3 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1.42857;
  font-weight: 500;
}

.c3 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<label
  htmlFor="the-select"
>
  <Styled(Box)
    between={2}
    inline={true}
    tag="span"
  >
    <StyledComponent
      between={2}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gZMcBi",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "align-items: center;",
            ],
          },
          "defaultProps": Object {
            "below": undefined,
            "between": undefined,
            "className": undefined,
            "horizontal": undefined,
            "inline": false,
            "inset": undefined,
            "tag": "div",
            "vertical": undefined,
          },
          "displayName": "Styled(Box)",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "below": [Function],
            "between": [Function],
            "children": [Function],
            "className": [Function],
            "horizontal": [Function],
            "inline": [Function],
            "inset": [Function],
            "tag": [Function],
            "vertical": [Function],
          },
          "render": [Function],
          "styledComponentId": "sc-gZMcBi",
          "target": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "below": undefined,
              "between": undefined,
              "className": undefined,
              "horizontal": undefined,
              "inline": false,
              "inset": undefined,
              "tag": "div",
              "vertical": undefined,
            },
            "displayName": "Box",
            "propTypes": Object {
              "below": [Function],
              "between": [Function],
              "children": [Function],
              "className": [Function],
              "horizontal": [Function],
              "inline": [Function],
              "inset": [Function],
              "tag": [Function],
              "vertical": [Function],
            },
            "render": [Function],
          },
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      inline={true}
      tag="span"
    >
      <Box
        between={2}
        className="c0"
        inline={true}
        tag="span"
      >
        <styled.div
          between={2}
          className="c0"
          inline={true}
          tag="span"
        >
          <StyledComponent
            between={2}
            className="c0"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [
                  [Function],
                ],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bdVaJa",
                  "isStatic": false,
                  "lastClassName": "LKvBy",
                  "rules": Array [
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-bdVaJa",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            inline={true}
            tag="span"
          >
            <span
              className="c0 sc-gZMcBi c0 c1"
            >
              <Text
                block={false}
                bold={true}
                data-testid="selectLabel"
                invert={false}
                size="medium"
              >
                <Text__StyledText
                  block={false}
                  bold={true}
                  data-testid="selectLabel"
                  invert={false}
                  size="medium"
                >
                  <StyledComponent
                    block={false}
                    bold={true}
                    data-testid="selectLabel"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Text__StyledText-sc-1m0rr67-0",
                          "isStatic": false,
                          "lastClassName": "c3",
                          "rules": Array [
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                            "sup {",
                            "top: -0.5em;",
                            "font-size: 0.875rem;",
                            "position: relative;",
                            "vertical-align: baseline;",
                            "padding-left: 0.1em;",
                            "}",
                          ],
                        },
                        "displayName": "Text__StyledText",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Text__StyledText-sc-1m0rr67-0",
                        "target": "span",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    invert={false}
                    size="medium"
                  >
                    <span
                      className="c2"
                      data-testid="selectLabel"
                      size="medium"
                    >
                      The select
                    </span>
                  </StyledComponent>
                </Text__StyledText>
              </Text>
              <Text
                block={false}
                bold={false}
                id="the-select_hint"
                invert={false}
                size="small"
              >
                <Text__StyledText
                  block={false}
                  bold={false}
                  id="the-select_hint"
                  invert={false}
                  size="small"
                >
                  <StyledComponent
                    block={false}
                    bold={false}
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Text__StyledText-sc-1m0rr67-0",
                          "isStatic": false,
                          "lastClassName": "c3",
                          "rules": Array [
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                            "sup {",
                            "top: -0.5em;",
                            "font-size: 0.875rem;",
                            "position: relative;",
                            "vertical-align: baseline;",
                            "padding-left: 0.1em;",
                            "}",
                          ],
                        },
                        "displayName": "Text__StyledText",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Text__StyledText-sc-1m0rr67-0",
                        "target": "span",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    id="the-select_hint"
                    invert={false}
                    size="small"
                  >
                    <span
                      className="c3"
                      id="the-select_hint"
                      size="small"
                    >
                      The short hint
                    </span>
                  </StyledComponent>
                </Text__StyledText>
              </Text>
            </span>
          </StyledComponent>
        </styled.div>
      </Box>
    </StyledComponent>
  </Styled(Box)>
</label>
`;

exports[`Select label must have a label 1`] = `
.c2 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 700;
}

.c2 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<label
  htmlFor="the-label"
>
  <Styled(Box)
    between={2}
    inline={true}
    tag="span"
  >
    <StyledComponent
      between={2}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gZMcBi",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "align-items: center;",
            ],
          },
          "defaultProps": Object {
            "below": undefined,
            "between": undefined,
            "className": undefined,
            "horizontal": undefined,
            "inline": false,
            "inset": undefined,
            "tag": "div",
            "vertical": undefined,
          },
          "displayName": "Styled(Box)",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "below": [Function],
            "between": [Function],
            "children": [Function],
            "className": [Function],
            "horizontal": [Function],
            "inline": [Function],
            "inset": [Function],
            "tag": [Function],
            "vertical": [Function],
          },
          "render": [Function],
          "styledComponentId": "sc-gZMcBi",
          "target": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "below": undefined,
              "between": undefined,
              "className": undefined,
              "horizontal": undefined,
              "inline": false,
              "inset": undefined,
              "tag": "div",
              "vertical": undefined,
            },
            "displayName": "Box",
            "propTypes": Object {
              "below": [Function],
              "between": [Function],
              "children": [Function],
              "className": [Function],
              "horizontal": [Function],
              "inline": [Function],
              "inset": [Function],
              "tag": [Function],
              "vertical": [Function],
            },
            "render": [Function],
          },
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      inline={true}
      tag="span"
    >
      <Box
        between={2}
        className="c0"
        inline={true}
        tag="span"
      >
        <styled.div
          between={2}
          className="c0"
          inline={true}
          tag="span"
        >
          <StyledComponent
            between={2}
            className="c0"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [
                  [Function],
                ],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bdVaJa",
                  "isStatic": false,
                  "lastClassName": "LKvBy",
                  "rules": Array [
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                    [Function],
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-bdVaJa",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            inline={true}
            tag="span"
          >
            <span
              className="c0 sc-gZMcBi c0 c1"
            >
              <Text
                block={false}
                bold={true}
                data-testid="selectLabel"
                invert={false}
                size="medium"
              >
                <Text__StyledText
                  block={false}
                  bold={true}
                  data-testid="selectLabel"
                  invert={false}
                  size="medium"
                >
                  <StyledComponent
                    block={false}
                    bold={true}
                    data-testid="selectLabel"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Text__StyledText-sc-1m0rr67-0",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                            "sup {",
                            "top: -0.5em;",
                            "font-size: 0.875rem;",
                            "position: relative;",
                            "vertical-align: baseline;",
                            "padding-left: 0.1em;",
                            "}",
                          ],
                        },
                        "displayName": "Text__StyledText",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Text__StyledText-sc-1m0rr67-0",
                        "target": "span",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    invert={false}
                    size="medium"
                  >
                    <span
                      className="c2"
                      data-testid="selectLabel"
                      size="medium"
                    >
                      The label
                    </span>
                  </StyledComponent>
                </Text__StyledText>
              </Text>
            </span>
          </StyledComponent>
        </styled.div>
      </Box>
    </StyledComponent>
  </Styled(Box)>
</label>
`;

exports[`Select needs a set of options 1`] = `[Function]`;

exports[`Select positions the down caret so that the text does not overlap it 1`] = `[Function]`;

exports[`Select renders 1`] = `
.c3 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 700;
}

.c3 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 > *:not(:last-child) {
  margin-right: 1rem;
}

.c10 {
  font-family: 'TELUS Core Icons';
  display: inline-block;
  font-weight: normal;
  font-style: normal;
  speak: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: none;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1;
  vertical-align: middle;
  color: #2B8000;
  font-size: 1rem;
}

.c10::before {
  content: '\\f105';
}

.c5 {
  background-color: #fff;
  position: relative;
}

.c6 {
  height: 3rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  margin: 0;
  outline: 0;
  text-overflow: ellipsis;
  border-color: #54595f;
  background-color: #fff;
  padding: 0.5rem 3rem 0.5rem 1rem;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
  color: #2a2c2e;
  min-height: 3rem;
  max-height: 3rem;
  padding: 0.5rem 3rem 0.5rem 1rem;
}

.c6::-ms-expand {
  display: none;
}

.c6::-webkit-input-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6::-moz-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6:-ms-input-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6::placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6::-webkit-inner-spin-button,
.c6::-webkit-outer-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c6:focus {
  border-color: transparent;
  box-shadow: 0 0 4px 1px #54595f;
  background-color: #fff;
}

.c7 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 1rem;
  pointer-events: none;
}

.c9 {
  line-height: 1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  position: relative;
}

<div
  class="c0"
>
  <div>
    <div
      class="c1"
    >
      <label
        for="the-select"
      >
        <span
          class="c2 sc-gZMcBi c2 c1"
        >
          <span
            class="c3"
            data-testid="selectLabel"
          >
            The select
          </span>
        </span>
      </label>
    </div>
  </div>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <select
        aria-invalid="false"
        class="c6"
        id="the-select"
      >
        <option
          value="value-1"
        >
          text one
        </option>
        <option
          value="value-2"
        >
          text two
        </option>
      </select>
      <div
        class="c7 sc-iwsKbI c7 c8"
      >
        <div
          class="c9"
        >
          <i
            aria-hidden="true"
            class="c10"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders with a feedback state and icon 1`] = `
.c10 {
  width: 1.25remrem;
  height: 1.25remrem;
}

.c3 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 700;
}

.c3 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 > *:not(:last-child) {
  margin-right: 1rem;
}

.c12 {
  font-family: 'TELUS Core Icons';
  display: inline-block;
  font-weight: normal;
  font-style: normal;
  speak: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: none;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1;
  vertical-align: middle;
  color: #c12335;
  font-size: 1rem;
}

.c12::before {
  content: '\\f105';
}

.c9 {
  line-height: 1;
}

.c5 {
  background-color: #fff;
  position: relative;
}

.c6 {
  height: 3rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  margin: 0;
  outline: 0;
  text-overflow: ellipsis;
  border-color: #54595f;
  background-color: #fff;
  padding: 0.5rem 3rem 0.5rem 1rem;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
  color: #2a2c2e;
  min-height: 3rem;
  max-height: 3rem;
  padding: 0.5rem 3rem 0.5rem 1rem;
}

.c6::-ms-expand {
  display: none;
}

.c6::-webkit-input-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6::-moz-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6:-ms-input-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6::placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6::-webkit-inner-spin-button,
.c6::-webkit-outer-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c6:focus {
  border-color: transparent;
  box-shadow: 0 0 4px 1px #54595f;
  background-color: #fff;
}

.c6:not(:focus) {
  border-color: #c12335;
}

.c7 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 1rem;
  pointer-events: none;
}

.c11 {
  line-height: 1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  position: relative;
}

<div
  class="c0"
>
  <div>
    <div
      class="c1"
    >
      <label
        for="the-select"
      >
        <span
          class="c2 sc-gZMcBi c2 c1"
        >
          <span
            class="c3"
            data-testid="selectLabel"
          >
            The select
          </span>
        </span>
      </label>
    </div>
  </div>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <select
        aria-invalid="true"
        class="c6"
        id="the-select"
      >
        <option
          value="value-1"
        >
          text one
        </option>
        <option
          value="value-2"
        >
          text two
        </option>
      </select>
      <div
        class="c7 sc-iwsKbI c7 c8"
      >
        <div
          style="transition:opacity 100ms ease-in-out;opacity:1"
        >
          <div
            class="c9"
          >
            <svg
              class="c10"
              height="1.25rem"
              role="img"
              viewBox="0 0 20 20"
              width="1.25rem"
            >
              <title>
                The value of this input field is invalid.
              </title>
              <path
                d="M0 10C0 4.48 4.48 0 10 0s10 4.48 10 10-4.48 10-10 10S0 15.52 0 10zm10 5.833a.833.833 0 1 0 0-1.666.833.833 0 0 0 0 1.666zm-.003-2.5c.354 0 .644-.306.654-.69l.182-6.912c.01-.4-.285-.731-.654-.731H9.82c-.369 0-.664.33-.654.73l.175 6.912c.01.385.3.691.655.691z"
                fill="#c12335"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <div
          class="c11"
        >
          <i
            aria-hidden="true"
            class="c12"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
